--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,11 @@
 <body>
    <h1>Fatec-RL</h1>
    <h2>ADS - ELE2 - 5o. matutino</h2>
-   <h4><a href="upperdowncase">Upper/Lowercase JSP</a></h4>
-   <h4><a href="calculadora">Calculadora JSP</a></h4>
-   
+   <h3>JSP</h3>
+   <h4><a href="upperdowncase">Upper/Lowercase</a></h4>
+   <h4><a href="calculadora">Calculadora</a></h4>
+   <h4><a href="figurasform">Figuras</a></h4>
+   <h4><a href="formmassa">Conversão de Massas</a></h4>
+   <h4><a href="formmedia">Média de alunos</a></h4>
 </body>
 </html>
